{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 3353,
  "lineage": "c49e1984-a81c-03ea-7cd3-2568ef317261",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "remoteVN",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.101.0.0/16"
            ],
            "dns_servers": [
              "10.101.1.4"
            ],
            "guid": "8f0fc4be-46a7-4d26-be0d-2eb2dfc55359",
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-permanent-resources/providers/Microsoft.Network/virtualNetworks/vnet-permanent-resources",
            "location": "westeurope",
            "name": "vnet-permanent-resources",
            "resource_group_name": "rg-permanent-resources",
            "subnets": [
              "subnet1-permanent-resources",
              "GatewaySubnet",
              "rg-pr-public-gw"
            ],
            "tags": {
              "app role": "CM Enterprise Training Playground",
              "application": "Chromeleon",
              "application owner": "eCDS Support Team",
              "application_support": "eCDS Support Team",
              "costcenter": "42000",
              "department": "eCDS Support",
              "division": "CMD",
              "environment": "Sandbox",
              "finance_contact": "Yuling.luo@thermofisher.com",
              "operating_system": "Windows"
            },
            "vnet_peerings": {
              "PeerToAmer": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/AmerRG/providers/Microsoft.Network/virtualNetworks/vnet-support-amer",
              "PeertoEmea": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/EmeaRG/providers/Microsoft.Network/virtualNetworks/vnet-support-emea",
              "perm-dtl-peering": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/dtl-cmtraining/providers/Microsoft.Network/virtualNetworks/vnet-dtl-cmtraining",
              "rg-SmcLink01-hub2spoke": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-SmcLink01/providers/Microsoft.Network/virtualNetworks/vnet-rg-SmcLink01",
              "rg-amer02-hub2spoke": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02",
              "rg-cment01-hub2spoke": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-cment01/providers/Microsoft.Network/virtualNetworks/vnet-rg-cment01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cliprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-client-ip-01",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-w11ip-01",
                "primary": true,
                "private_ip_address": "10.70.10.10",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-client-ip-01",
            "private_ip_address": "10.70.10.10",
            "private_ip_addresses": [
              "10.70.10.10"
            ],
            "resource_group_name": "rg-amer02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-client-ip-02",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-w11ip-02",
                "primary": true,
                "private_ip_address": "10.70.10.13",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-client-ip-02",
            "private_ip_address": "10.70.10.13",
            "private_ip_addresses": [
              "10.70.10.13"
            ],
            "resource_group_name": "rg-amer02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-client-ip-03",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-w11ip-03",
                "primary": true,
                "private_ip_address": "10.70.10.16",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-client-ip-03",
            "private_ip_address": "10.70.10.16",
            "private_ip_addresses": [
              "10.70.10.16"
            ],
            "resource_group_name": "rg-amer02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-client-ip-04",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-w11ip-04",
                "primary": true,
                "private_ip_address": "10.70.10.17",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-client-ip-04",
            "private_ip_address": "10.70.10.17",
            "private_ip_addresses": [
              "10.70.10.17"
            ],
            "resource_group_name": "rg-amer02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "srvprivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-server-ip-01",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-wsrvip-01",
                "primary": true,
                "private_ip_address": "10.70.10.18",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-server-ip-01",
            "private_ip_address": "10.70.10.18",
            "private_ip_addresses": [
              "10.70.10.18"
            ],
            "resource_group_name": "rg-amer02",
            "tags": {
              "app role": "CM Enterprise Training Playground",
              "application": "Chromeleon",
              "application owner": "eCDS Support Team",
              "application_support": "eCDS Support Team",
              "costcenter": "42000",
              "department": "eCDS Support",
              "division": "CMD",
              "environment": "Sandbox",
              "finance_contact": "Yuling.luo@thermofisher.com",
              "group": "eCDS Support Team",
              "infrastructure_support": "eCDS Support Team",
              "operating_system": "Windows"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-server-ip-02",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-wsrvip-02",
                "primary": true,
                "private_ip_address": "10.70.10.19",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-server-ip-02",
            "private_ip_address": "10.70.10.19",
            "private_ip_addresses": [
              "10.70.10.19"
            ],
            "resource_group_name": "rg-amer02",
            "tags": {
              "app role": "CM Enterprise Training Playground",
              "application": "Chromeleon",
              "application owner": "eCDS Support Team",
              "application_support": "eCDS Support Team",
              "costcenter": "42000",
              "department": "eCDS Support",
              "division": "CMD",
              "environment": "Sandbox",
              "finance_contact": "Yuling.luo@thermofisher.com",
              "group": "eCDS Support Team",
              "infrastructure_support": "eCDS Support Team",
              "operating_system": "Windows"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-server-ip-03",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-wsrvip-03",
                "primary": true,
                "private_ip_address": "10.70.10.15",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-server-ip-03",
            "private_ip_address": "10.70.10.15",
            "private_ip_addresses": [
              "10.70.10.15"
            ],
            "resource_group_name": "rg-amer02",
            "tags": {
              "app role": "CM Enterprise Training Playground",
              "application": "Chromeleon",
              "application owner": "eCDS Support Team",
              "application_support": "eCDS Support Team",
              "costcenter": "42000",
              "department": "eCDS Support",
              "division": "CMD",
              "environment": "Sandbox",
              "finance_contact": "Yuling.luo@thermofisher.com",
              "group": "eCDS Support Team",
              "infrastructure_support": "eCDS Support Team",
              "operating_system": "Windows"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkInterfaces/rg-amer02-server-ip-04",
            "internal_domain_name_suffix": "iw1q5g1jazou5kff4m3xzj5nmg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "rg-amer02-config-wsrvip-04",
                "primary": true,
                "private_ip_address": "10.70.10.14",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
              }
            ],
            "location": "eastus",
            "name": "rg-amer02-server-ip-04",
            "private_ip_address": "10.70.10.14",
            "private_ip_addresses": [
              "10.70.10.14"
            ],
            "resource_group_name": "rg-amer02",
            "tags": {
              "app role": "CM Enterprise Training Playground",
              "application": "Chromeleon",
              "application owner": "eCDS Support Team",
              "application_support": "eCDS Support Team",
              "costcenter": "42000",
              "department": "eCDS Support",
              "division": "CMD",
              "environment": "Sandbox",
              "finance_contact": "Yuling.luo@thermofisher.com",
              "group": "eCDS Support Team",
              "infrastructure_support": "eCDS Support Team",
              "operating_system": "Windows"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "pod_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkSecurityGroups/rg-amer02-pod",
            "location": "eastus",
            "name": "rg-amer02-pod",
            "resource_group_name": "rg-amer02",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.71.0.0/16"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkSecurityGroups/rg-amer02-pod/securityRules/Allow_RDP",
            "name": "Allow_RDP",
            "network_security_group_name": "rg-amer02-pod",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-amer02",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "10.70.0.0/16"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.pod_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.70.10.0/24",
            "address_prefixes": [
              "10.70.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01",
            "name": "rg-amer02-private-01",
            "resource_group_name": "rg-amer02",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-rg-amer02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-assoc-pod_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01",
            "network_security_group_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkSecurityGroups/rg-amer02-pod",
            "subnet_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.pod_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.70.0.0/16"
            ],
            "dns_servers": [
              "10.101.1.4"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9b0fb745-0669-4f5d-a8a5-f33b7ca7ed66",
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02",
            "location": "eastus",
            "name": "vnet-rg-amer02",
            "resource_group_name": "rg-amer02",
            "subnet": [
              {
                "address_prefix": "10.70.10.0/24",
                "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/subnets/rg-amer02-private-01",
                "name": "rg-amer02-private-01",
                "security_group": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/networkSecurityGroups/rg-amer02-pod"
              }
            ],
            "tags": {
              "app role": "CM Enterprise Training Playground",
              "application": "Chromeleon",
              "application owner": "eCDS Support Team",
              "application_support": "eCDS Support Team",
              "costcenter": "42000",
              "department": "eCDS Support",
              "division": "CMD",
              "environment": "Sandbox",
              "finance_contact": "Yuling.luo@thermofisher.com",
              "group": "eCDS Support Team",
              "infrastructure_support": "eCDS Support Team",
              "operating_system": "Windows"
            },
            "vm_protection_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-permanent-resources/providers/Microsoft.Network/virtualNetworks/vnet-permanent-resources/virtualNetworkPeerings/rg-amer02-hub2spoke",
            "name": "rg-amer02-hub2spoke",
            "remote_virtual_network_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02",
            "resource_group_name": "rg-permanent-resources",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-permanent-resources"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.remoteRG",
            "data.azurerm_virtual_network.remoteVN"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-amer02/providers/Microsoft.Network/virtualNetworks/vnet-rg-amer02/virtualNetworkPeerings/rg-amer02-spoke2hub",
            "name": "rg-amer02-spoke2hub",
            "remote_virtual_network_id": "/subscriptions/7a9a1455-c13b-435f-ae84-6e464515eefa/resourceGroups/rg-permanent-resources/providers/Microsoft.Network/virtualNetworks/vnet-permanent-resources",
            "resource_group_name": "rg-amer02",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-rg-amer02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "data.azurerm_virtual_network.remoteVN"
          ]
        }
      ]
    }
  ]
}